tests/compile_fail/invalid_grid_line_empty_ident.rs
use surgeist_style::GridLine;

fn main() {
    let _line = GridLine::BareIdent(String::new());
}
